src/components/Share/styles.css
.share-container {
  align-self: flex-end;
  background-color: #E7E7E7;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 75vh;
  width: 100%;
  height: 30%;
}

h4 {
  font-weight: bold;
}

.share-header {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

.share-buttons {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  gap: 10px;
  align-items: center;
  height: 50%;
}

.form-share-email {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.form-email-input {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  margin: 0.5rem 0 0.5rem 0; 
  width: 80%;
  gap: 20px;
}

.icon {
  cursor: pointer;
  transform: scale(2.0)
}

.form-share-email .form-email-input input {
  flex-grow: 1;
  padding: 1rem;
}

.form-share-email .form-email-input button {
  margin: 0;
} 

